fix z-index

--- a/zag-trader/src/pages/dashboard/components/banner.css
+++ b/zag-trader/src/pages/dashboard/components/banner.css
@@ -23,6 +23,7 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     position: relative;
+    z-index: 2;
 }
 
 @media (min-width: 992px){
